src/test
Loading source file BilletEtudiant.java...
Loading source file BilletExtra.java...
Loading source file Billet.java...
Loading source file BilletMoinsDe16.java...
Loading source file BilletPleinTarif.java...
Loading source file Cinema.java...
Loading source file Client.java...
Loading source file Film.java...
Loading source file Genre.java...
Loading source file IModeleCinema.java...
Loading source file Manager.java...
Loading source file ModeleCinema.java...
Loading source file Reservation.java...
Loading source file Salle.java...
Loading source file Seance.java...
Loading source file SupplementBoisson.java...
Loading source file SupplementGlace.java...
Loading source file SupplementPopcorn.java...
Loading source file TestModele.java...
Loading source file TypeSeance.java...
Loading source file Utilisateur.java...
Constructing Javadoc information...
Building index for all the packages and classes...
Standard Doclet version 21.0.5+11-Ubuntu-1ubuntu120.04
Building tree for all the packages and classes...
Generating ../doc/Billet.html...
Generating ../doc/BilletEtudiant.html...
Generating ../doc/BilletExtra.html...
Generating ../doc/BilletMoinsDe16.html...
Generating ../doc/BilletPleinTarif.html...
Generating ../doc/Cinema.html...
Cinema.java:2: warning: no comment
public class Cinema {
       ^
Cinema.java:2: warning: use of default constructor, which does not provide a comment
public class Cinema {
       ^
Generating ../doc/Client.html...
Generating ../doc/Film.html...
Generating ../doc/Genre.html...
Generating ../doc/IModeleCinema.html...
IModeleCinema.java:101: warning: no @param for f
	public Set<Seance> getListeSeancesFilm (Film f);
	                   ^
IModeleCinema.java:150: error: @param name not found
	 * @param nom nom du manager à enregistrer
	          ^
IModeleCinema.java:151: error: @param name not found
	 * @param email email du manager à enregistrer
	          ^
IModeleCinema.java:152: error: @param name not found
	 * @param mdp mot de passe du manager à enregistrer
	          ^
IModeleCinema.java:155: warning: no @param for titre
	public int ajouterFilm (String titre, int a, String desc);
	           ^
IModeleCinema.java:155: warning: no @param for a
	public int ajouterFilm (String titre, int a, String desc);
	           ^
IModeleCinema.java:155: warning: no @param for desc
	public int ajouterFilm (String titre, int a, String desc);
	           ^
IModeleCinema.java:164: error: @param name not found
	 * @param genres genres du film à enregistrer
	          ^
IModeleCinema.java:167: warning: no @param for genres_str
	public int ajouterFilm (String titre, int a, String desc, ArrayList<String> genres_str);
	           ^
IModeleCinema.java:183: warning: no @param for capacite
	public int ajouterSalle (int numeroSalle, int capacite);
	           ^
IModeleCinema.java:7: warning: no comment
public interface IModeleCinema {
       ^
Generating ../doc/Manager.html...
Generating ../doc/ModeleCinema.html...
ModeleCinema.java:8: warning: no comment
public class ModeleCinema implements IModeleCinema {
       ^
ModeleCinema.java:18: warning: no comment
	public static final int ID_VALUE_ON_ERROR = -1;
	                        ^
ModeleCinema.java:20: warning: no comment
	public ModeleCinema () {
	       ^
Generating ../doc/Reservation.html...
Generating ../doc/Salle.html...
Generating ../doc/Seance.html...
Generating ../doc/SupplementBoisson.html...
Generating ../doc/SupplementGlace.html...
Generating ../doc/SupplementPopcorn.html...
Generating ../doc/TestModele.html...
TestModele.java:3: warning: no comment
public class TestModele {
       ^
TestModele.java:3: warning: use of default constructor, which does not provide a comment
public class TestModele {
       ^
TestModele.java:21: warning: no comment
  public static void essayerAjoutSalle (IModeleCinema modele, int numero, int capacite) {
                     ^
TestModele.java:5: warning: no comment
  public static void essayerConnexion (IModeleCinema modele, String email, String mdp) {
                     ^
TestModele.java:33: warning: no comment
  public static void main (String args[]) {
                     ^
Generating ../doc/TypeSeance.html...
Generating ../doc/Utilisateur.html...
Generating ../doc/package-summary.html...
Generating ../doc/package-tree.html...
Generating ../doc/constant-values.html...
Generating ../doc/overview-tree.html...
Building index for all classes...
Generating ../doc/allclasses-index.html...
Generating ../doc/allpackages-index.html...
Generating ../doc/index-all.html...
Generating ../doc/search.html...
Generating ../doc/index.html...
Generating ../doc/help-doc.html...
4 errors
17 warnings
